Added iteration 3: A first recipe!

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>
         Odin Recipes
     </h1>
+    <a href="./recipes/leek_smoked_ham_stew.html">Leek and smoked ham stew</a>
 </body>
 </html>
