--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h1>
         Odin Recipes
     </h1>
-    <a href="./recipes/leek_smoked_ham_stew.html">Leek and smoked ham stew</a>
+    <ul>
+        <li><a href="./recipes/leek_smoked_ham_stew.html">Leek and smoked ham stew</a></li>
+        <li><a href="./recipes/spaghetti_bolognese.html">Spaghetti Bolognese</a></li>
+        <li></li>
+    </ul>
+
 </body>
 </html>
