--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="./recipes/leek_smoked_ham_stew.html">Leek and smoked ham stew</a></li>
         <li><a href="./recipes/spaghetti_bolognese.html">Spaghetti Bolognese</a></li>
-        <li></li>
+        <li><a href="./recipes/Balkan_grill.html">Balkan grill</a></li>
     </ul>
 
 </body>
